--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "thot-site": "bin/thot-site.js"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && prettier --write .",
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk"
@@ -13,9 +13,10 @@
   "devDependencies": {
     "@types/jest": "^29.5.8",
     "@types/node": "20.9.0",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
     "aws-cdk": "2.108.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.1.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "~5.2.2"
   },
