--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc && prettier --write .",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "precommit": "pretty-quick --staged",
+    "prepare": "husky install .husky"
   },
   "devDependencies": {
     "@types/jest": "^29.5.8",
